--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "xxh/think-wxminihelper": "^1.0"
     },
     "minimum-stability": "dev"
 }
